--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "password-generator",
+  "homepage": "https://jabnia.github.io/password-generator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,14 +18,15 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "copy-to-clipboard": "^3.3.3",
-    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "scripts": {
     "start": "react-scripts start",
